infra/k8s/database/redisinsight/basicauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redisinsight-basicauth
  namespace: database
spec:
  basicAuth:
    secret: redisinsight-basicauth
