infra/k8s/database/redisinsight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: database
  labels:
    app: redisinsight
spec:
  type: ClusterIP
  selector:
    app: redisinsight
  ports:
    - port: 5540
      targetPort: 5540
